# equinox

./: .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  flake.nix  mkdocs.yml  mkdocs_hook.py  pyproject.toml  pytest.ini  setup.py  test.py
.github/: FUNDING.yml
.github/workflows/: build_docs.yml  release.yml  run_tests.yml
benchmarks/: compile.py  noinline.py
docs/: .citation.md  .htaccess  all-of-equinox.md  awesome-list.md  citation.md  faq.md  imgs  index.md  pattern.md  requirements.txt  tricks.md
docs/_overrides/partials/: source.html
docs/_static/: .README.md  custom_css.css
docs/api/: advanced_fields.md  caches.md  debug.md  enumerations.md  errors.md  helpers.md  manipulation.md  norms.md  progress-meter.md  serialisation.md  stateful.md  transformations.md  utilities.md
docs/api/experimental/: noinline.md  stateful.md
docs/api/filtering/: filter-functions.md  filter-operations.md  filtered-transformations.md  partition-combine.md  transformations.md
docs/api/module/: advanced_fields.md  module.md
docs/api/nn/: activations.md  attention.md  composed.md  conv.md  dropout.md  embedding.md  inference.md  linear.md  mlp.md  normalisation.md  pool.md  rnn.md  sequential.md  shared.md  state_spaces.md  stateful.md
docs/api/utilities/: enumerations.md  manipulation.md  miscellaneous.md  pretty-printing.md  serialisation.md
docs/examples/: bert.ipynb  deep_convolutional_gan.ipynb  frozen_layer.ipynb  init_apply.ipynb  mnist.ipynb  parallelism.ipynb  score_based_diffusion.ipynb  serialisation.ipynb  stateful.ipynb  train_rnn.ipynb  unet.ipynb  vision_transformer.ipynb
equinox/: __init__.py  _ad.py  _better_abstract.py  _caches.py  _callback.py  _compile_utils.py  _config.py  _custom_types.py  _deprecate.py  _doc_utils.py  _enum.py  _errors.py  _eval_shape.py  _filters.py  _jit.py  _make_jaxpr.py  _misc.py  _module.py  _norm.py  _pretty_print.py  _progress_meter.py  _serialisation.py  _sharding.py  _tree.py  _unvmap.py  _update.py  _vmap_pmap.py  activations.py  ad.py  annotations.py  autograd.py  autojit.py  better_abc.py  callback.py  compile_utils.py  composed.py  custom_types.py  deprecated.py  doc_utils.py  eval_shape.py  (+15 more)
equinox/_module/: README.md  __init__.py  _better_abstract.py  _field.py  _flatten.py  _module.py  _prebuilt.py  _update_wrapper.py
equinox/debug/: __init__.py  _announce_transform.py  _backward_nan.py  _breakpoint_if.py  _dce.py  _max_traces.py  _print.py
equinox/experimental/: __init__.py  _batch_norm.py  _spectral_norm.py  _stateful.py  batch_norm.py  noinline.py  normalisation.py  spectral_norm.py  stateful.py  vmap_pmap.py
equinox/internal/: README.md  __init__.py  _closure_to_pytree.py  _debug.py  _enum.py  _errors.py  _finalise_jaxpr.py  _getkey.py  _misc.py  _nextafter.py  _noinline.py  _nontraceable.py  _omega.py  _onnx.py  _primitive.py  _progress_meter.py  _str2jax.py  _unvmap.py  ad.py  bounded_while_loop.py  checkpointed_while_loop.py  debug.py  debug_jaxpr.py  errors.py  finalise_jaxpr.py  misc.py  nextafter.py  noinline.py  nontraceable.py  omega.py  onnx.py  primitive.py  str2jax.py  unvmap.py
equinox/internal/_loop/: __init__.py  bounded.py  checkpointed.py  common.py  loop.py
equinox/internal/loop/: __init__.py  checkpointed.py  common.py  loop.py
equinox/internal/while_loop/: __init__.py  bounded.py  checkpointed.py  common.py  while_loop.py
equinox/nn/: __init__.py  _activations.py  _attention.py  _batch_norm.py  _composed.py  _conv.py  _dropout.py  _embedding.py  _inference.py  _kv_cache.py  _linear.py  _misc.py  _mlp.py  _normalisation.py  _pool.py  _rnn.py  _selective_state_space_models.py  _sequential.py  _shared.py  _spectral_norm.py  _state_space_models.py  _stateful.py  _weight_norm.py  activations.py  array_utils.py  attention.py  composed.py  conv.py  dropout.py  embedding.py  linear.py  normalisation.py  normalization.py  pool.py  rnn.py
examples/: alexnet.ipynb  awesome-list.md  bert.ipynb  build_model.py  deep_convolutional_gan.ipynb  example.py  filtered_transformations.py  frozen_layer.ipynb  frozen_layer.py  init_apply.ipynb  mamba.ipynb  mistral_7b.md  mnist.ipynb  mnist_cnn_example.ipynb  mnist_example.ipynb  modules_to_initapply.py  multipart_serialised.eqx  parallelism.ipynb  proximal_policy_optimization_brax.ipynb  score_based_diffusion.ipynb  serialisation.ipynb  stateful.ipynb  train_mlp.py  train_rnn.ipynb  train_rnn.py  unet.ipynb  unet.py  vision_transformer.ipynb
examples/BERT/: BERT.ipynb
tests/: conftest.py  helpers.py  requirements.txt  test_CNN_temp.py  test_abstract.py  test_ad.py  test_annotations.py  test_bounded_while_loop.py  test_caches.py  test_callback.py  test_checkpoint.py  test_checkpointed_while_loop.py  test_closure_to_pytree.py  test_debug.py  test_enum.py  test_errors.py  test_eval_shape.py  test_examples.py  test_filter_grad.py  test_filter_jit.py  test_filter_pmap.py  test_filter_vmap.py  test_filters.py  test_finalise_jaxpr.py  test_grad.py  test_gradf.py  test_jit.py  test_jitf.py  test_layers.py  test_make_jaxpr.py  test_misc.py  test_module.py  test_nn.py  test_noinline.py  test_nontraceable.py  test_norm.py  test_onnx.py  test_pformat.py  test_pmap.py  test_primitive.py  (+12 more)
